added cors to server

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
               Connected Peer:
               <span id="connected_peer"></span>
             </div>
-            <button id="login">Login</button>
+            <button id="login">Connect To a Peer</button>
           </div>
 
           <div id="chat" class="hidden">
