--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,21 @@
   <body>
     <div id="wrapper">
 
-      <!-- Display the video of the remote peer -->
-      <div id="peer-camera" class="camera">
-        <video width="300" height="300" autoplay></video>
+      <div class="cameras">
+        <!-- Display the video of the remote peer -->
+        <div id="peer-camera" class="camera">
+          <video autoplay></video>
+        </div>
+
+        <!-- Display video of the current user -->
+        <div id="my-camera" class="camera">
+          <video autoplay muted></video>
+        </div>
       </div>
 
       <div id="messenger-wrapper">
         <div class="container">
-          <h1>Peer Messenger</h1>
+          <h2>Messages</h2>
 
           <!--
             Display the login form and messaging form.
@@ -50,11 +57,6 @@
             </div>
           </div>
         </div>
-      </div>
-
-      <!-- Display video of the current user -->
-      <div id="my-camera" class="camera">
-        <video width="200" height="200" autoplay></video>
       </div>
     </div>
 
